add code, message to company name list response
